# picoC64USB

./: .gitmodules  CMakeLists.txt  README.md
doc/schematic/picoC64USB/: .gitignore  picoC64USB.kicad_prl  picoC64USB.kicad_pro  picoC64USB.kicad_sch
src/: config.h  debug.h  main.c  main.h  pins.h  tusb_config.h
src/c64/: control_port.h
src/hid/: hid.c
src/xbone_pad/: xbone_pad.c
